fixed scrollbar

--- a/nfcapture-app/src/components/Content/Content.scss
+++ b/nfcapture-app/src/components/Content/Content.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    min-height: 44vw;
+    min-height: 42vw;
 }
 
 .dark-btn {
