--- a/nfcapture-app/src/components/Footer/Footer.scss
+++ b/nfcapture-app/src/components/Footer/Footer.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
-  height: calc(100% - 42vw - 80px);
+  height: calc(100% - 42vw - 90px);
   position: sticky;
   bottom: auto;
   background-color: rgb(0, 0, 0);
